--- a/src/index.html
+++ b/src/index.html
@@ -8,27 +8,21 @@
     <link rel="stylesheet" href="./output.css" />
 </head>
 
-<body>
-    <header class="container p-4 mx-auto">
-        <nav class="flex justify-between">
-            <a class="underline text-blue-700 hover:text-blue-800" href="#">Marca</a>
-            <ul class="flex gap-6">
-                <li><a class="text-blue-600 hover:text-blue-800 p-2" href="">Sobre</a></li>
-                <li><a class="text-blue-600 hover:text-blue-800 p-2" href="">Produtos</a></li>
-                <li><a class="text-blue-600 hover:text-blue-800 p-2" href="">Contato</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section class="container p-4 mx-auto w-72">
-        <div class="border border-gray-300 p-4 rounded-md">
-            <div>
-                <h5 class="text-2xl mb-2">Bicicleta</h5>
-                <p class="mb-4">Bicicleta elétrica - R$ 5.000</p>
-                <a class="transition duration-500 bg-red-300 hover:bg-red-500 hover:text-white text-black py-2 px-4 rounded-md inline-block"
-                    href="#">Comprar</a>
-            </div>
-        </div>
-    </section>
+<body class="m-8">
+    <h1 class="text-4xl mb-8 border-y-2 py-4">Curriculum</h1>
+    <h2 class="text-2xl mb-4">Habilidades</h2>
+    <ul class="w-64 mb-8">
+        <li class="bg-gray-200 border-l-4 border-purple-600 pl-8 py-2 mb-2">HTML</li>
+        <li class="bg-gray-200 border-l-4 border-purple-600 pl-8 py-2 mb-2">CSS</li>
+        <li class="bg-gray-200 border-l-4 border-purple-600 pl-8 py-2 mb-2">Javascript</li>
+    </ul>
+
+    <h2 class="text-2xl mb-4">Línguas</h2>
+    <ul class="w-64">
+        <li class="bg-gray-200 border-l-4 border-purple-600 pl-8 py-2">Inglês</li>
+        <li class="bg-gray-300 border-l-4 border-purple-600 pl-6 py-2 ml-2 -mt-1">Português</li>
+        <li class="bg-gray-400 border-l-4 border-purple-600 pl-4 py-2 ml-4 -mt-1">Italiano</li>
+    </ul>
 </body>
 
 </html>
