--- a/src/index.html
+++ b/src/index.html
@@ -9,20 +9,12 @@
 </head>
 
 <body class="m-8">
-    <h1 class="text-4xl mb-8 border-y-2 py-4">Curriculum</h1>
-    <h2 class="text-2xl mb-4">Habilidades</h2>
-    <ul class="w-64 mb-8">
-        <li class="bg-gray-200 border-l-4 border-purple-600 pl-8 py-2 mb-2">HTML</li>
-        <li class="bg-gray-200 border-l-4 border-purple-600 pl-8 py-2 mb-2">CSS</li>
-        <li class="bg-gray-200 border-l-4 border-purple-600 pl-8 py-2 mb-2">Javascript</li>
-    </ul>
-
-    <h2 class="text-2xl mb-4">Línguas</h2>
-    <ul class="w-64">
-        <li class="bg-gray-200 border-l-4 border-purple-600 pl-8 py-2">Inglês</li>
-        <li class="bg-gray-300 border-l-4 border-purple-600 pl-6 py-2 ml-2 -mt-1">Português</li>
-        <li class="bg-gray-400 border-l-4 border-purple-600 pl-4 py-2 ml-4 -mt-1">Italiano</li>
-    </ul>
+    <div class="grid grid-cols-3 *:bg-gray-300 *:p-4 gap-4">
+        <div class="col-span-full">item 1</div>
+        <div class="col-span-2 row-span-2">item 2</div>
+        <div class="row-span-4">item 3</div>
+        <div class="row-start-6">item 4</div>
+    </div>
 </body>
 
 </html>
