--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,36 @@
 </head>
 
 <body class="m-8">
-    <div class="grid grid-cols-3 *:bg-gray-300 *:p-4 gap-4">
-        <div class="col-span-full">item 1</div>
-        <div class="col-span-2 row-span-2">item 2</div>
-        <div class="row-span-4">item 3</div>
-        <div class="row-start-6">item 4</div>
+    <div class="grid grid-cols-3 gap-x-8 gap-y-10">
+        <a class="col-span-2" href="#">Nivacraft</a>
+        <ul class="grid grid-cols-2 *:text-right">
+            <li>
+                <a class="" href="#">Bicicletas</a>
+            </li>
+            <li>
+                <a class="" href="#">Contato</a>
+            </li>
+        </ul>
+
+        <p>Produtos de alta Qualidade</p>
+        <p class="col-span-2">Produtos de alta precisão e qualidade, feitos sob medida para você. Explore o mundo na sua
+            velocidade com a Nivacraft.</p>
+
+        <div>
+            <img class="mb-4" src="./img/notebook.jpg" alt="">
+            <p>Notebook R$ 2.000</p>
+        </div>
+
+        <div>
+            <img class="mb-4" src="./img/camera.jpg" alt="">
+            <p>Câmera R$ 1.500</p>
+        </div>
+
+        <div>
+            <img class="mb-4" src="./img/tablet.jpg" alt="">
+            <p>Tablet R$ 1.200</p>
+        </div>
+
     </div>
 </body>
 
