--- a/src/index.html
+++ b/src/index.html
@@ -9,36 +9,38 @@
 </head>
 
 <body class="m-8">
-    <div class="grid grid-cols-3 gap-x-8 gap-y-10">
-        <a class="col-span-2" href="#">Nivacraft</a>
-        <ul class="grid grid-cols-2 *:text-right">
-            <li>
-                <a class="" href="#">Bicicletas</a>
-            </li>
-            <li>
-                <a class="" href="#">Contato</a>
-            </li>
-        </ul>
+    <div class="grid gap-12">
 
-        <p>Produtos de alta Qualidade</p>
-        <p class="col-span-2">Produtos de alta precisão e qualidade, feitos sob medida para você. Explore o mundo na sua
-            velocidade com a Nivacraft.</p>
+        <header class="grid grid-cols-[1fr_auto]">
+            <a class="" href="/">Nivacraft</a>
+            <ul class="grid grid-cols-2 gap-8">
+                <li><a href="#">Bicicletas</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+        </header>
 
-        <div>
-            <img class="mb-4" src="./img/notebook.jpg" alt="">
-            <p>Notebook R$ 2.000</p>
+        <div class="grid grid-cols-3">
+            <h1>Produtros de Alta Qualidade</h1>
+            <p class="col-span-2">
+                Produtos de alta precisão e qualidade, feitos sob medida para você.
+                Explore o mundo na sua velocidade com a Nivacraft.
+            </p>
         </div>
 
-        <div>
-            <img class="mb-4" src="./img/camera.jpg" alt="">
-            <p>Câmera R$ 1.500</p>
-        </div>
-
-        <div>
-            <img class="mb-4" src="./img/tablet.jpg" alt="">
-            <p>Tablet R$ 1.200</p>
-        </div>
-
+        <section class="grid grid-cols-3 gap-8">
+            <div class="grid gap-2">
+                <img src="./img/notebook.jpg" alt="">
+                <h2>Notebook R$ 2.000</h2>
+            </div>
+            <div class="grid gap-2">
+                <img src="./img/camera.jpg" alt="">
+                <h2>Câmera R$ 1.500</h2>
+            </div>
+            <div class="grid gap-2">
+                <img src="./img/tablet.jpg" alt="">
+                <h2>Tablet R$ 1.200</h2>
+            </div>
+        </section>
     </div>
 </body>
 
