--- a/src/index.html
+++ b/src/index.html
@@ -9,38 +9,11 @@
 </head>
 
 <body class="m-8">
-    <div class="grid gap-12">
-
-        <header class="grid grid-cols-[1fr_auto]">
-            <a class="" href="/">Nivacraft</a>
-            <ul class="grid grid-cols-2 gap-8">
-                <li><a href="#">Bicicletas</a></li>
-                <li><a href="#">Contato</a></li>
-            </ul>
-        </header>
-
-        <div class="grid grid-cols-3">
-            <h1>Produtros de Alta Qualidade</h1>
-            <p class="col-span-2">
-                Produtos de alta precisão e qualidade, feitos sob medida para você.
-                Explore o mundo na sua velocidade com a Nivacraft.
-            </p>
-        </div>
-
-        <section class="grid grid-cols-3 gap-8">
-            <div class="grid gap-2">
-                <img src="./img/notebook.jpg" alt="">
-                <h2>Notebook R$ 2.000</h2>
-            </div>
-            <div class="grid gap-2">
-                <img src="./img/camera.jpg" alt="">
-                <h2>Câmera R$ 1.500</h2>
-            </div>
-            <div class="grid gap-2">
-                <img src="./img/tablet.jpg" alt="">
-                <h2>Tablet R$ 1.200</h2>
-            </div>
-        </section>
+    <div class="flex gap-4">
+        <span class="bg-lime-100 text-lime-800 border-2 border-lime-300 px-5 py-1 rounded-full">Pago</span>
+        <span class="bg-blue-100 text-blue-800 border-2 border-blue-300 px-5 py-1 rounded-full">Arquivado</span>
+        <span class="bg-yellow-100 text-yellow-800 border-2 border-yellow-300 px-5 py-1 rounded-full">Processando</span>
+        <span class="bg-red-100 text-red-800 border-2 border-red-300 px-5 py-1 rounded-full">Falha</span>
     </div>
 </body>
 
