--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
 <body class="m-8">
     <div class="flex gap-4">
         <span class="bg-lime-100 text-lime-800 border-2 border-lime-300 px-5 py-1 rounded-full">Pago</span>
-        <span class="bg-blue-100 text-blue-800 border-2 border-blue-300 px-5 py-1 rounded-full">Arquivado</span>
         <span class="bg-yellow-100 text-yellow-800 border-2 border-yellow-300 px-5 py-1 rounded-full">Processando</span>
-        <span class="bg-red-100 text-red-800 border-2 border-red-300 px-5 py-1 rounded-full">Falha</span>
+        <span class="bg-blue-100 text-blue-800 border-2 border-blue-300 px-5 py-1 rounded-full">Arquivado</span>
+        <span class="bg-red-100 text-red-800 border-2 border-red-300 px-5 py-1 rounded-full">Erro no pedido</span>
     </div>
 </body>
 
