--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./output.css" />
 </head>
 
-<body class="bg-verde-800 fonte-sans">
+<body class="bg-verde-800 fonte-sans mb-96 pb-96">
     <div class="container mt-4 flex justify-center md:justify-start">
         <div class="inline-flex items-center rounded-md bg-verde-900">
             <span class="size-2 bg-verde-300 block rounded-full relative -left-1"></span>
@@ -33,6 +33,33 @@
             </ul>
         </nav>
     </header>
+
+    <main class="container">
+        <div class="text-white relative pt-64 px-8 pb-8 rounded-2xl overflow-hidden bg-gradient-to-t from-verde-950/80">
+            <img class="absolute -z-10 size-full inset-0 object-cover" src="./img/floresta.jpg" alt="">
+            <div class="bg-verde-950 inline-flex mb-8 gap-8 items-center justify-center py-1 pr-1 rounded-full pl-4 ">
+                Vagas para dezembro abertas
+                <a href="#" class="bg-verde-400 text-verde-900 py-2 px-4 inline-block rounded-full">Reserve Hoje</a>
+            </div>
+            <h1 class="mb-20 font-serif max-w-screen-sm text-5xl text-balance">
+                Venha experimentar a vida na floresta!
+            </h1>
+            <div class="text-sm flex justify-between items-end">
+                <p>
+                    Melhores locais para visitar em <a href="#"
+                        class="underline decoration-2 underline-offset-4 hover:no-underline">2049</a>
+                </p>
+                <div class="">
+                    <p class="uppercase mb-2">Recomendado por</p>
+                    <p class="flex items-center gap-4">
+                        <img class="w-28" src="img/parceiros/wildbeast.svg" alt="wildbeast">
+                        <span>|</span>
+                        Revista Nacional
+                    </p>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
