--- a/src/index.html
+++ b/src/index.html
@@ -35,17 +35,19 @@
     </header>
 
     <main class="container">
-        <div class="text-white relative pt-64 px-8 pb-8 rounded-2xl overflow-hidden bg-gradient-to-t from-verde-950/80">
+        <div
+            class="text-white relative pt-64 px-8 pb-8 rounded-2xl overflow-hidden bg-gradient-to-t from-verde-950/80 max-sm:pt-12 max-sm:px-4">
             <img class="absolute -z-10 size-full inset-0 object-cover" src="./img/floresta.jpg" alt="">
-            <div class="bg-verde-950 inline-flex mb-8 gap-8 items-center justify-center py-1 pr-1 rounded-full pl-4 ">
+            <div
+                class="bg-verde-950/60 rounded-xl flex flex-col items-start gap-2 p-4 mb-8 sm:gap-8 sm:items-center sm:py-1 sm:pl-4 sm:pr-1 sm:bg-verde-950 sm:inline-flex sm:flex-row sm:rounded-full  ">
                 Vagas para dezembro abertas
                 <a href="#" class="bg-verde-400 text-verde-900 py-2 px-4 inline-block rounded-full">Reserve Hoje</a>
             </div>
-            <h1 class="mb-20 font-serif max-w-screen-sm text-5xl text-balance">
+            <h1 class="mb-8 font-serif max-w-screen-sm text-4xl text-balance sm:text-5xl sm:mb-20">
                 Venha experimentar a vida na floresta!
             </h1>
-            <div class="text-sm flex justify-between items-end">
-                <p>
+            <div class="text-sm sm:flex justify-between items-end">
+                <p class="max-sm:mb-4">
                     Melhores locais para visitar em <a href="#"
                         class="underline decoration-2 underline-offset-4 hover:no-underline">2049</a>
                 </p>
@@ -60,6 +62,19 @@
             </div>
         </div>
     </main>
+    <section id="acomodacoes" class="container">
+        <div>
+            <h2>Refúgio Natural</h2>
+            <ul>
+                <li><span></span>Experimente a natureza de perto</li>
+                <li><span></span>Conecte-se com a natureza</li>
+                <li><span></span>Desconecte-se do digital</li>
+                <li><span></span>Observe a vida selvagem</li>
+                <li><span></span>Escolha a sua cabine preferida</li>
+            </ul>
+        </div>
+        <div></div>
+    </section>
 </body>
 
 </html>
