--- a/src/index.html
+++ b/src/index.html
@@ -62,18 +62,40 @@
             </div>
         </div>
     </main>
-    <section id="acomodacoes" class="container">
-        <div>
-            <h2>Refúgio Natural</h2>
-            <ul>
-                <li><span></span>Experimente a natureza de perto</li>
-                <li><span></span>Conecte-se com a natureza</li>
-                <li><span></span>Desconecte-se do digital</li>
-                <li><span></span>Observe a vida selvagem</li>
-                <li><span></span>Escolha a sua cabine preferida</li>
+    <section id="acomodacoes" class="container lg:grid grid-cols-[2fr_3fr] gap-8 pt-16 mb-12 sm:mb-16">
+        <div class="bg-[url('./img/padrao.svg')] bg-no-repeat bg-contain bg-left-bottom content-end">
+            <h2 class="text-white mb-8 text-4xl font-serif lg:text-5xl">Refúgio Natural</h2>
+            <ul class="text-gray-200 *:flex *:items-center *:gap-4 grid gap-4 sm:text-xl">
+                <li><span class="h-0.5 w-6 bg-verde-400 inline-block"></span>Experimente a natureza de perto</li>
+                <li><span class="h-0.5 w-6 bg-verde-400 inline-block"></span>Conecte-se com a natureza</li>
+                <li><span class="h-0.5 w-6 bg-verde-400 inline-block"></span>Desconecte-se do digital</li>
+                <li><span class="h-0.5 w-6 bg-verde-400 inline-block"></span>Observe a vida selvagem</li>
+                <li><span class="h-0.5 w-6 bg-verde-400 inline-block"></span>Escolha a sua cabine preferida</li>
             </ul>
         </div>
-        <div></div>
+        <div class="grid grid-cols-[2fr_1fr] gap-4 sm:gap-8">
+            <div class="col-span-full grid *:col-start-1 *:row-start-1">
+                <img class="h-52 object-cover w-full rounded-xl" src="./img/casa1.jpg" alt="Casa 1">
+                <span
+                    class="m-2 self-start justify-self-end uppercase text-white rounded-full bg-verde-950/60 px-4 py-2 text-sm/none">
+                    Ruby
+                </span>
+            </div>
+            <div class="grid *:col-start-1 *:row-start-1">
+                <img class="object-cover size-full rounded-xl" src="./img/casa2.jpg" alt="Casa 2">
+                <span
+                    class="m-2 self-start justify-self-end uppercase text-white rounded-full bg-verde-950/60 px-4 py-2 text-sm/none">
+                    Emerald
+                </span>
+            </div>
+            <div class="grid *:col-start-1 *:row-start-1">
+                <img class="object-cover size-full rounded-xl" src="./img/casa3.jpg" alt="Casa 3">
+                <span
+                    class="m-2 self-start justify-self-end uppercase text-white rounded-full bg-verde-950/60 px-4 py-2 text-sm/none">
+                    Sapphire
+                </span>
+            </div>
+        </div>
     </section>
 </body>
 
