área de eventos

--- a/src/index.html
+++ b/src/index.html
@@ -97,6 +97,65 @@
             </div>
         </div>
     </section>
+    <!-- eventos -->
+    <section id="eventos" class="mb-12 sm:mb-16 py-12 sm:py-16 bg-verde-900">
+        <div class="container">
+            <p class="mb-4 text-center text-verde-200 uppercase tracking-widest text-sm">
+                Conecte-se com a natureza
+            </p>
+            <h2
+                class="mb-8 text-center max-w-screen-md mx-auto text-balance font-serif capitalize text-white text-4xl sm:text-6xl">
+                Cada som, cada momento, uma nova descoberta
+            </h2>
+            <div
+                class="overflow-x-auto pb-4 grid grid-cols-[repeat(3,minmax(300px,1fr))] gap-4 sm:gap-8 snap-x snap-mandatory">
+                <div class="grid gap-4 bg-verde-800 p-6 sm:p-8 rounded-xl snap-center">
+                    <h3 class="text-verde-300 text-2xl font-serif">Lua nova</h3>
+                    <div class="text-white">
+                        <p class="font-serif text-5xl">23</p>
+                        <p class="text-xl">Março 2049</p>
+                    </div>
+                    <p class="text-gray-300 text-balance">
+                        Melhor período para observação astronômica. O céu estará claro e as estrelas visíveis.
+                    </p>
+                    <a href="#contato"
+                        class="justify-self-start self-end bg-verde-400 text-verde-900 py-2 px-4 inline-block rounded-full">
+                        Reservar 23/03
+                    </a>
+                </div>
+                <div class="grid gap-4 bg-verde-800 p-6 sm:p-8 rounded-xl snap-center">
+                    <h3 class="text-verde-300 text-2xl font-serif">Aurora Boreal</h3>
+                    <div class="text-white">
+                        <p class="font-serif text-5xl">15</p>
+                        <p class="text-xl">Abril 2049</p>
+                    </div>
+                    <p class="text-gray-300 text-balance">
+                        Melhor período para observação da Aurora Boreal. O céu estará iluminado pelas estrelas.
+                    </p>
+                    <a href="#contato"
+                        class="justify-self-start self-end bg-verde-400 text-verde-900 py-2 px-4 inline-block rounded-full">
+                        Reservar 15/04
+                    </a>
+                </div>
+                <div class="grid gap-4 bg-verde-800 p-6 sm:p-8 rounded-xl snap-center">
+                    <h3 class="text-verde-300 text-2xl font-serif">Chuva de Meteoros</h3>
+                    <div class="text-white">
+                        <p class="font-serif text-5xl">18</p>
+                        <p class="text-xl">Agosto 2049</p>
+                    </div>
+                    <p class="text-gray-300 text-balance">
+                        Melhor período para observação de chuva de meteoros. O céu estará iluminado pelas estrelas.
+                    </p>
+                    <a href="#contato"
+                        class="justify-self-start self-end bg-verde-400 text-verde-900 py-2 px-4 inline-block rounded-full">
+                        Reservar 18/08
+                    </a>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
 </body>
 
 </html>
