--- a/src/index.html
+++ b/src/index.html
@@ -312,7 +312,16 @@
             <button class="inline-block bg-verde-400 px-4 py-2 rounded-full text-verde-900 place-self-start">Enviar email</button>
         </form>
     </section>
-
+    <!-- parceiros -->
+     <section class="mb-12 sm:mb-16 container">
+        <ul class="flex sm:flex-row flex-col items-center sm:gap-8 sm:border-verde-900 py-4 sm:py-8 *:p-4 sm:border-t-2 sm:border-b-2 max-sm:divide-y-2 max-sm:divide-verde-900 *:*:max-h-8">
+            <li><img src="./img/parceiros/caravan.svg" alt="Caravan"></li> 
+            <li><img src="./img/parceiros/dogs.svg" alt="dogs"></li>
+            <li><img src="./img/parceiros/wildbeast.svg" alt="wildbeast"></li>
+            <li><img src="./img/parceiros/lescone.svg" alt="Lescone"></li>
+            <li><img src="./img/parceiros/surfbot.svg" alt="Surfbot"></li>
+        </ul>
+     </section>
 </body>
 
 </html>
