--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./output.css" />
 </head>
 
-<body class="bg-verde-800 mb-96 pb-96 fonte-sans">
+<body class="bg-verde-800 fonte-sans">
     <div class="flex justify-center md:justify-start mt-4 container">
         <div class="inline-flex items-center bg-verde-900 rounded-md">
             <span class="block relative -left-1 bg-verde-300 rounded-full size-2"></span>
@@ -322,6 +322,41 @@
             <li><img src="./img/parceiros/surfbot.svg" alt="Surfbot"></li>
         </ul>
      </section>
+     <footer class="pb-8 container">
+        <div class="gap-8 grid lg:grid-cols-2 bg-verde-900 mb-8 p-6 sm:p-12 rounded-2xl">
+            <div class="flex max-sm:flex-col gap-12 max-sm:gap-4">
+                <div>
+                    <h3 class="mb-4 font-serif text-white text-xl">Endereço</h3>
+                    <p class="text-gray-400">
+                        Rua da Mata, 123 <br>
+                        Floresta Nacional <br>
+                        Rio de Janeiro, RJ
+                    </p>
+                </div>
+
+                <div>
+                    <h3 class="mb-4 font-serif text-white text-xl">Contato</h3>
+                    <p class="text-gray-400">
+                        contato@forest.com <br>
+                        +55 (21) 9 9999 9999
+                    </p>
+                </div>
+            </div>
+            <div class="lg:justify-self-end">
+                <img class="mb-4" src="./img/forest.svg" alt="Forest">
+                <p class="text-gray-400">Conecte-se com a natureza.</p>
+            </div>
+        </div>
+        <div class="flex max-sm:flex-col max-sm:flex-col-reverse justify-between items-center gap-8 text-gray-400 text-sm">
+            <p>© 2025 Forest. Todos os direitos reservados.</p>
+            <ul class="flex gap-8">
+                <li><a href="#" class="hover:text-verde-300">Instagram</a></li>
+                <li><a href="#" class="hover:text-verde-300">LinkedIn</a></li>
+                <li><a href="#" class="hover:text-verde-300">Facebook</a></li>
+            </ul>
+        </div>
+
+     </footer>
 </body>
 
 </html>
