--- a/src/index.html
+++ b/src/index.html
@@ -24,14 +24,28 @@
         <a href="./">
             <img src="./img/forest.svg" alt="">
         </a>
-        <nav>
-            <ul class="flex flex-wrap gap-8 text-white text-xl">
-                <li><a class="hover:underline hover:underline-offset-8" href="#acomodacoes">Acomodações</a></li>
-                <li><a class="hover:underline hover:underline-offset-8" href="#eventos">Eventos</a></li>
-                <li><a class="hover:underline hover:underline-offset-8" href="#experiencias">Experiências</a></li>
-                <li><a class="hover:underline hover:underline-offset-8" href="#contato">Contato</a></li>
+        <nav id="mobile-menu" class="lg:block z-40 max-lg:fixed max-lg:inset-0 items-center hidden max-lg:w-full">
+            <div class="fixed inset-0 lg:hidden bg-verde-950/40 backdrop-blur-md"></div>
+            <ul
+                class="max-lg:z-50 max-lg:absolute lg:flex lg:flex-wrap lg:gap-8 max-lg:p-8 max-lg:divide-y-2 max-lg:divide-white/10 max-lg:w-full text-2xl text-white lg:text-xl">
+                <li><a class="block max-lg:hover:bg-white/10 lg:px-0 lg:py-2 p-4 lg:hover:underline lg:hover:underline-offset-8"
+                        href="#acomodacoes">Acomodações</a></li>
+                <li><a class="block max-lg:hover:bg-white/10 lg:px-0 lg:py-2 p-4 lg:hover:underline lg:hover:underline-offset-8"
+                        href="#eventos">Eventos</a></li>
+                <li><a class="block max-lg:hover:bg-white/10 lg:px-0 lg:py-2 p-4 lg:hover:underline lg:hover:underline-offset-8"
+                        href="#experiencias">Experiências</a></li>
+                <li><a class="block max-lg:hover:bg-white/10 lg:px-0 lg:py-2 p-4 lg:hover:underline lg:hover:underline-offset-8"
+                        href="#contato">Contato</a></li>
             </ul>
         </nav>
+        <button id="mobile-button"
+            class="flex items-center gap-3 lg:hidden bg-verde-400 px-4 py-2 rounded-full text-verde-900">Menu
+            <span class="flex flex-col justify-between *:bg-verde-800 *:rounded-md *:w-3 h-3 *:h-0.5">
+                <span></span>
+                <span></span>
+                <span></span>
+            </span>
+        </button>
     </header>
 
     <main class="container">
@@ -178,7 +192,7 @@
             <p class="mb-8 pl-10 text-balance text-gray-400">Conquiste novos horizontes.</p>
         </div>
         <div class="gap-4 grid grid-cols-2 grid-rows-2">
-            <div class="relative rounded-xl cursor-pointer overflow-hidden group">
+            <div class="group relative rounded-xl cursor-pointer overflow-hidden">
                 <img class="group-hover:scale-110 transition-transform object-cover size-full" src="./img/canoagem.jpg"
                     alt="Canoagem">
                 <div
@@ -187,7 +201,7 @@
                 </div>
             </div>
 
-            <div class="relative row-span-2 rounded-xl cursor-pointer overflow-hidden group">
+            <div class="group relative row-span-2 rounded-xl cursor-pointer overflow-hidden">
                 <img class="group-hover:scale-110 transition-transform object-cover size-full"
                     src="./img/observacao-noturna.jpg" alt="Observação Noturna">
                 <div
@@ -195,7 +209,7 @@
                     <span class="text-white">Observação Noturna</span>
                 </div>
             </div>
-            <div class="relative rounded-xl cursor-pointer overflow-hidden group">
+            <div class="group relative rounded-xl cursor-pointer overflow-hidden">
                 <img class="group-hover:scale-110 transition-transform object-cover size-full"
                     src="./img/vida-selvagem.jpg" alt="Vida Selvagem">
                 <div
@@ -309,7 +323,7 @@
                     class="border-2 border-verde-800 bg-verde-800 p-2 rounded-md focus:ring-2 focus:ring-verde-400 text-white placeholder:text-verde-700 focus:outline-none resize-none"
                     placeholder="Mensagem" id="mensagem" name="mensagem" rows="5""></textarea>
             </div>
-            <button class="inline-block bg-verde-400 px-4 py-2 rounded-full text-verde-900 place-self-start">Enviar email</button>
+            <button class=" inline-block bg-verde-400 px-4 py-2 rounded-full text-verde-900 place-self-start">Enviar email</button>
         </form>
     </section>
     <!-- parceiros -->
@@ -347,6 +361,7 @@
                 <p class="text-gray-400">Conecte-se com a natureza.</p>
             </div>
         </div>
+        
         <div class="flex max-sm:flex-col max-sm:flex-col-reverse justify-between items-center gap-8 text-gray-400 text-sm">
             <p>© 2025 Forest. Todos os direitos reservados.</p>
             <ul class="flex gap-8">
@@ -357,6 +372,20 @@
         </div>
 
      </footer>
+     <script>
+        const mobileButton = document.getElementById('mobile-button');
+        const mobileMenu = document.getElementById('mobile-menu');
+
+        mobileButton.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
+            mobileMenu.classList.toggle('flex');
+        })
+
+        mobileMenu.addEventListener('click', () => {
+            mobileMenu.classList.add('hidden');
+            mobileMenu.classList.remove('flex');
+        })
+    </script>
 </body>
 
 </html>
