animação menu mobile

--- a/src/index.html
+++ b/src/index.html
@@ -28,13 +28,17 @@
             <div class="fixed inset-0 lg:hidden bg-verde-950/40 backdrop-blur-md"></div>
             <ul
                 class="max-lg:z-50 max-lg:absolute lg:flex lg:flex-wrap lg:gap-8 max-lg:p-8 max-lg:divide-y-2 max-lg:divide-white/10 max-lg:w-full text-2xl text-white lg:text-xl">
-                <li><a class="block max-lg:hover:bg-white/10 lg:px-0 lg:py-2 p-4 lg:hover:underline lg:hover:underline-offset-8"
+                <li class="opacity-0 animate-0 animate-slide-in"><a
+                        class="block max-lg:hover:bg-white/10 lg:px-0 lg:py-2 p-4 lg:hover:underline lg:hover:underline-offset-8"
                         href="#acomodacoes">Acomodações</a></li>
-                <li><a class="block max-lg:hover:bg-white/10 lg:px-0 lg:py-2 p-4 lg:hover:underline lg:hover:underline-offset-8"
+                <li class="opacity-0 animate-1 animate-slide-in"><a
+                        class="block max-lg:hover:bg-white/10 lg:px-0 lg:py-2 p-4 lg:hover:underline lg:hover:underline-offset-8"
                         href="#eventos">Eventos</a></li>
-                <li><a class="block max-lg:hover:bg-white/10 lg:px-0 lg:py-2 p-4 lg:hover:underline lg:hover:underline-offset-8"
+                <li class="opacity-0 animate-2 animate-slide-in"><a
+                        class="block max-lg:hover:bg-white/10 lg:px-0 lg:py-2 p-4 lg:hover:underline lg:hover:underline-offset-8"
                         href="#experiencias">Experiências</a></li>
-                <li><a class="block max-lg:hover:bg-white/10 lg:px-0 lg:py-2 p-4 lg:hover:underline lg:hover:underline-offset-8"
+                <li class="opacity-0 animate-3 animate-slide-in"><a
+                        class="block max-lg:hover:bg-white/10 lg:px-0 lg:py-2 p-4 lg:hover:underline lg:hover:underline-offset-8"
                         href="#contato">Contato</a></li>
             </ul>
         </nav>
