fonts + animação de rolagem

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" class="scroll-smooth">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TailwindCSS</title>
     <link rel="stylesheet" href="./output.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload"
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=DM+Serif+Text&display=swap"
+        as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=DM+Serif+Text&display=swap">
+    </noscript>
 </head>
 
 <body class="bg-verde-800 fonte-sans">
@@ -325,7 +334,7 @@
     </section>
     <!-- parceiros -->
      <section class="mb-12 sm:mb-16 container">
-        <ul class="flex sm:flex-row flex-col items-center sm:gap-8 sm:border-verde-900 py-4 sm:py-8 *:p-4 sm:border-t-2 sm:border-b-2 max-sm:divide-y-2 max-sm:divide-verde-900 *:*:max-h-8">
+        <ul class="flex sm:flex-row flex-col sm:justify-center items-center sm:gap-8 sm:border-verde-900 py-4 sm:py-8 *:p-4 sm:border-t-2 sm:border-b-2 max-sm:divide-y-2 max-sm:divide-verde-900 *:*:max-h-8">
             <li><img src="./img/parceiros/caravan.svg" alt="Caravan"></li> 
             <li><img src="./img/parceiros/dogs.svg" alt="dogs"></li>
             <li><img src="./img/parceiros/wildbeast.svg" alt="wildbeast"></li>
